forEnersys/DavePkg/objects/Configurator_API_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Base_Launch_URL_BSP__c</fullName>
        <description>Start of the URL do not include &apos;/&apos; at the end</description>
        <label>Base Launch URL BSP</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Launch_URL_OEMSpec__c</fullName>
        <description>Start of the launch URL. Do not include &apos;/&apos; at the end</description>
        <label>Base Launch URL OEMSpec</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Launch_URL_PSR__c</fullName>
        <label>Base Launch URL PSR</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config_Receipts_Max_Count__c</fullName>
        <label>Config Receipts Max Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Config_Receipts_Window_Hours__c</fullName>
        <label>Config Receipts Window Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dummy_Part_Number_Accessories__c</fullName>
        <label>Dummy Part Number Accessories</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Part_Number_Battery__c</fullName>
        <label>Dummy Part Number Battery</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Part_Number_Cabinet__c</fullName>
        <label>Dummy Part Number Cabinet</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Part_Number_Charger__c</fullName>
        <label>Dummy Part Number Charger</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Part_Number_Default__c</fullName>
        <label>Dummy Part Number Default</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Part_Number_DisconnectSwitch__c</fullName>
        <label>Dummy Part Number DisconnectSwitch</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Part_Number_Kit__c</fullName>
        <label>Dummy Part Number Kit</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Part_Number_Optional__c</fullName>
        <label>Dummy Part Number Optional</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Part_Number_Rack__c</fullName>
        <label>Dummy Part Number Rack</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Part_Number_SpillContainment__c</fullName>
        <label>Dummy Part Number SpillContainment</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Configurator API Settings</label>
</CustomObject>